# minisatml

./: Makefile  README.md  dune-project  heap.ml  heap.mli  main.ml  minisat_o0  minisat_o1  minisat_o2  minisat_o3  minisatml.opam  parser.ml  parser.mli  satML_1  satML_2  satML_3  satML_o0  satML_o1  satML_o2  satML_o3  sat_bench.sh  solver.ml  solver.mli  types.ml  types.mli  utils.ml  vec.ml  vec.mli
examples/minisat/: ex0.cnf  ex1.cnf  ex10.cnf  ex13.cnf  ex15.cnf  ex16.cnf  ex18.cnf  ex19.cnf  ex3.cnf  ex5.cnf  exx.cnf  exxx.cnf  minisat_ex9  pb1.cnf  pb2.cnf  sat-said-unsat.cnf  to.cnf  toto.cnf  velev-sss.cnf
exemples/: ex11.cnf  ex14.cnf  ex17.cnf  ex2.cnf  ex4.cnf  ex6.cnf  ex9.cnf  exxx2.cnf  pb1.cnf  pb2.cnf  pb3.cnf  ptit.cnf  satML_ex9  t1.cnf  t2.cnf
minisat/core/: Main.C  Solver.C  Solver.h  SolverTypes.h
minisat/mtl/: Alg.h  Heap.h  Queue.h  Sort.h  Vec.h  template.mk
satml/: Makefile  alg.ml  main.ml  queue.ml  solver.ml  solver.mli  types.ml  types.mli  vec.ml  vec_int.ml  vec_int.mli
src/: alg.ml  dune  heap.ml  heap.mli  minisatml.ml  parser.ml  queue.ml  solver.ml  solver.mli  types.ml  types.mli  vec.ml  vec.mli  vec_int.ml
