url {
  src: "https://github.com/ptal/minisatml/archive/v0.0.1.tar.gz"
}
opam-version: "2.0"
maintainer: "Albin Coquereau <coquera@lri.fr>"
authors: [
  "Albin Coquereau <coquera@lri.fr>"
]
homepage: "https://github.com/ptal/minisatml"
bug-reports: "https://github.com/ptal/minisatml/issues"
dev-repo: "git+https://github.com/ptal/minisatml"
license: "LGPL"
build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]
run-test: [
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
depends: [
  "dune" {build}
  "ocaml" {>= "4.07.1"}
]

synopsis: "SAT solver in OCaml inspired by MiniSAT."
description: "SAT solver in OCaml inspired by MiniSAT."
